# hdzero-goggle-services

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hostname.txt  setup.sh
.devcontainer/: Dockerfile
bearssl/: CMakeLists.txt  hdzero.mk
bearssl/scripts/: 30_bearssl_startup.sh
busybox/: CMakeLists.txt  config  config.cross  config.host  generate.sh
busybox/patch/coreutils/: date.diff
busybox/patch/util-linux/: rdate.diff
busybox/scripts/: udhcpc_start.sh
cmake/: toolchain.cmake
dosfstools/: CMakeLists.txt
dropbear/: CMakeLists.txt
fbgrab/: CMakeLists.txt
ffmpeg/: CMakeLists.txt
ffmpeg/scripts/: 50_ffmpeg_startup.sh
libpng/: CMakeLists.txt
libz/: CMakeLists.txt
ntpclient/: CMakeLists.txt
ntpclient/scripts/: 70_ntpclient_startup.sh
ntpclient/source/: Makefile
scripts/: install.sh
src/bearssl/: CMakeLists.txt
src/busybox/: CMakeLists.txt  config.cross  config.host
src/dosfstools/: CMakeLists.txt
src/dropbear/: CMakeLists.txt
src/fbgrab/: CMakeLists.txt
src/fbgrab/patch/: Makefile.diff
src/ffmpeg/: CMakeLists.txt
src/ffmpeg/scripts/: 50_ffmpeg_startup.sh
src/iperf/: CMakeLists.txt
src/libpng/: CMakeLists.txt
src/libpng/patch/: CMakeLists.diff
src/libx264/: CMakeLists.txt
src/libx264/scripts/: 30_x264_startup.sh
src/libz/: CMakeLists.txt
src/ntpclient/: CMakeLists.txt
src/ntpclient/source/: ntpclient.c  rtc.c  rtc.h
src/tinycurl/: CMakeLists.txt
src/untrunc/: CMakeLists.txt
tinycurl/: CMakeLists.txt
untrunc/: CMakeLists.txt
webui/scripts/: webui_startup.sh
webui/source/: index.html  login.html
webui/source/cgi-bin/: constants  dvr  file  live  multip  rstp  setting  settings  status  utils
webui/source/css/: global.css  index.css  login.css
webui/source/script/: global.js
x264/: CMakeLists.txt
x264/scripts/: 30_x264_startup.sh
